Test virtual threads.